# firefliesTranscriptToBear

./: .gitignore  CLAUDE.md  LICENSE  README.md  plan.md  pyproject.toml  setup.py
.cursor/rules/: python.mdc
scripts/: install.sh  uninstall.sh
src/fireflies_to_bear/: __main__.py  app.py  bear_integration.py  config.py  file_matcher.py  file_monitor.py  main.py  note_generator.py  pdf_parser.py  state_manager.py
tests/: test_app.py  test_bear_integration.py  test_config.py  test_file_matcher.py  test_file_monitor.py  test_main.py  test_note_generator.py  test_pdf_parser.py  test_state_manager.py  test_system.py
